# BasicGraphics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
BasicSimulator/: ApplicationWindow.cpp  ApplicationWindow.hpp
examples/: 00_color_screen.cpp
include/: ApplicationWindow.hpp  Window.hpp
src/: ApplicationWindow.cpp  Window.cpp  main.cpp
utils/: ApplicationState.cpp  ApplicationState.hpp  ApplicationWindow.cpp  ApplicationWindow.hpp  CMakeLists.txt
